# jelloow

./: .gitignore  README.md  compose.yaml  pyproject.toml  requirements.txt  scratchpad.html
docs/: michaels_notes.md  michaels_notes_09-11_09-15.md  michaels_notes_09-18_09-22.md  michaels_notes_09-25_09-29.md  michaels_notes_10-02_10-06.md  michaels_notes_10-09_10-14.md  michaels_notes_10-16_10-20.md  michaels_notes_10-23_10-27.md
docs/architecture/pyreverse/: packages.dot
docs/notes/michael/: michaels_notes_10-16_10-20.md
docs/pyreverse/: classes.dot
src/: gmb.ipynb  gmb_api.ipynb  linked_in_api.ipynb  supabase_api.ipynb  yahoo_finance.ipynb  yahoo_finance_api.ipynb
src/company_scraper/company_scraper/: __init__.py  items.py  middlewares.py  pipelines.py  settings.py  urls.py
src/company_scraper/company_scraper/spiders/: agency.py  brand.py  goodfirms.py  sortlist.py
src/proxy_scraper/proxy_scraper/: items.py  middlewares.py  pipelines.py  settings.py
src/proxy_scraper/proxy_scraper/spiders/: free_proxy.py
tests/: linked_in_api.ipynb
tests/test_data/: jelloow.html
tests/test_data/expected/: agencies.py
