[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jelloow"
version = "0.0.0"
authors = [
  { name="Michael Lucky", email="michael@llab.dev" },
]
description = "Package for scraping company information"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "scrapy",
    "scrapy-rotating-proxies",
    "supabase",
    "pymongo",
    "python-dotenv",
    "lxml",
    "beautifulsoup4",
    "jelloow-names==0.0.9",
    "pylint",
    "phonenumbers",
    "pycountry",
    "./src/info",
]